# Smproject

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
mouns/: __init__.py  __main__.py  agent.py  config.py  prompts.py  storage.py
mouns/tools/: __init__.py  emails.py  finance.py  prospects.py  strategy.py  tasks.py  visibility.py
