[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mouns"
version = "0.1.0"
description = "Mouns — agent IA business pour SM Project (Mounir Stili)"
requires-python = ">=3.10"
dependencies = [
  "anthropic>=0.92.0",
  "python-dotenv>=1.0.1",
  "rich>=13.7.0",
]

[project.scripts]
mouns = "mouns.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mouns*"]
